# MT5Projekt-Clean

./: .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .ps1  AI_COMMANDS_EXAMPLES.md  AI_MONITORING.md  AUTO_SYMBOL_MANAGEMENT.md  AUTO_UPDATE_GUIDE.md  AUTO_UPLOAD.md  BUILD_INSTRUCTIONS.md  BUILD_RELEASE.bat  DEPLOYMENT_COMPLETE.md  DETAILED_NONE_ANALYSIS.md  DIAGNOSTIC_REPORT.md  Dockerfile  FINAL_INSTRUCTION.md  FINAL_REFACTORING_COMPLETE.md  FIXES_APPLIED.md  FIX_VECTORDb_AND_TRAINING.md  GITHUB_BUILD_GUIDE.md  GITHUB_SETUP_COMPLETE.md  GITHUB_SETUP_GUIDE.md  GenesisTrading.spec  HOW_TO_RUN.md  HOW_TO_USE_IMPROVEMENT_PROMPT.md  IMPLEMENTATION_REPORT.md  IMPROVEMENT_PLAN.md  INTEGRATION_REPORT.md  LAUNCH_SUCCESS.md  LOGGING_GUIDE.md  MANIFEST.in  NEWS_COLLECTOR_SETUP.md  NONE_COMPARISON_FIXES.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE5_COMPLETE.md  (+146 more)
.qwen/: settings.json
assets/: graph_view.html  qwebchannel.js
configs/: .env.example  .gitignore  gui_settings_example.json  optimized_params.json  production.yaml  redis.conf  settings.example.json  settings.json  strategy_configurations.json  strategy_parameters.json
database/: trading_system.db-shm  trading_system.db-wal
deploy/: mt5projekt.service
docs/: CHANGELOG_THREADING.md  DEMO_AND_MONITORING_GUIDE.md  INTEGRATION_EXAMPLES.md  INTEGRATION_GUIDE.md  THREADING_ARCHITECTURE.md  user_guide.md
hooks/: mpl_patch.py
installer_output/: README.md  SHA256.txt
monitoring/: dashboard_simple.py  loki.yml  prometheus.yml  promtail.yml  simple_dashboard.py
scripts/: check_database_completeness.py  check_types.bat  convert_market_to_candles.py  download_historical_data.py  encrypt_config.py  export_genesis_databases.py  export_to_genesis.py  extract_and_import.py  import_external_data.py  import_from_sqlite.py  import_to_genesis.py  init-db.sql  init-timescaledb.sql  maintenance.bat  migrate_secrets_to_keyring.py  migrate_to_multi_db.py  migrate_to_python311.ps1  optimize_all.bat  run_tests.bat  start-demo-with-monitoring.sh  start_genesis.bat  test_extract_import.py
src/: _version.py  data_models.py
tests/: __init__.py  conftest.py  test_backtest_modes.py  test_base_service.py  test_critical_safety.py  test_data_models.py  test_database_manager.py  test_health_check.py  test_integration.py  test_ml_coordinator.py  test_model_fallback.py  test_secrets_manager.py  test_service_integration.py  (+3 more)
(+302 files in other folders)
